objects/EUR_CRM_Contract_Tracker_Line_Item__c.object
<CustomObject>
    <description>Initially for GB Phase 2</description>
    <fields>
        <fullName>EUR_CRM_Contract_Tracker__c</fullName>
        <label>Contract Tracker (EU)</label>
        <referenceTo>EUR_CRM_Contract_Tracker__c</referenceTo>
        <relationshipLabel>Contract Tracker Line Items (EU)</relationshipLabel>
        <relationshipName>Contract_Tracker_Line_Items_EU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contracted_Volume_9L__c</fullName>
        <label>Contracted Volume (9L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gin</fullName>
                </value>
                <value>
                    <fullName>Vodka</fullName>
                </value>
                <value>
                    <fullName>Anis</fullName>
                </value>
                <value>
                    <fullName>Aperitif Wines</fullName>
                </value>
                <value>
                    <fullName>Bitters</fullName>
                </value>
                <value>
                    <fullName>Brandy</fullName>
                </value>
                <value>
                    <fullName>Liquors</fullName>
                </value>
                <value>
                    <fullName>Other Spirit</fullName>
                </value>
                <value>
                    <fullName>Rum</fullName>
                </value>
                <value>
                    <fullName>Sparkling Wines</fullName>
                </value>
                <value>
                    <fullName>Still Wines</fullName>
                </value>
                <value>
                    <fullName>Tequila</fullName>
                </value>
                <value>
                    <fullName>Whisky</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contract Tracker Line Item (EU)</label>
    <nameField>
        <displayFormat>CTLI-{0000000000}</displayFormat>
        <label>Contract Tracker Line Item (EU) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Tracker Line Items (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_Contract_Tracker_Line_Item</fullName>
        <active>true</active>
        <label>EUR BE Contract Tracker Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Contract_Tracker_Line_Item</fullName>
        <active>true</active>
        <label>EUR RU Contract Tracker Line Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>